# 6502

./: .gitmodules  README.md
.devcontainer/cpp/: devcontainer-feature.json
apple1/: .gitignore  README.md  apple1.cfg  build.sh  build.zsh  wozmon.h  wozmon.s
apple1/msbasic/: basic.s
apple1/msbasic/applesoft-lite/: applesoft-lite.s
apple1/src/: Makefile  apple1.cfg  applesoft.s  ibasic.s  io.s  wozmon.s
eater/: Makefile  README.md
eater/src/: hello-world-4pin.s  wozmon.s
emulator/: .gitignore  CMakeLists.txt  README.md  logging.cfg
emulator/.devcontainer/: devcontainer.json
emulator/.devcontainer/cpp/: devcontainer-feature.json  install.sh  main.sh
emulator/apps/: CMakeLists.txt  emulator.cpp  emulator.h
emulator/include/: basic.h  bus.h  cpu.h  display.h  emulator.h  keyboard.h  memory.h  rom.h  wozmon.h
emulator/src/: CMakeLists.txt  cpu.cpp  display.cpp  keyboard.cpp  logging.cpp  memory.cpp  wozmon.s
hw/: console.md  modules.md
